fixing spacing for video section(bottom)

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -18,6 +18,20 @@ h5.informasiproduk {
     object-fit: cover;
 }
 
+.mb-20{
+    margin-bottom: 18rem;
+}
+
+.mb-video{
+    margin-bottom: 2rem;
+}
+
+.img-table {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
 h5.card-title {
     color: #4e944f;
     font-weight: 450;
